# routesV4/virtual_specialty.js
@@ -7,7 +7,8 @@ var virtual_Service = require("../schema/virtual_services.js");
 var virtual_Invoice = require("../schema/virtual_invoice.js");
 var User = require("../schema/user.js");
 var Institute = require("../schema/institute.js");
-var Appointments =require("../schema/appointments")
+var Appointments = require("../schema/appointments")
+var virtual_step = require("../schema/virtual_step")
 var jwtconfig = require("../jwttoken");
 const { TrunkInstance } = require("twilio/lib/rest/trunking/v1/trunk");
 var fullinfo = [];
@@ -251,7 +252,7 @@ router.get("/GetAllArchivedTask/:house_id", function (req, res, next) {
   let legit = jwtconfig.verify(token);
   if (legit) {
     virtual_Task.find(
-      { house_id: req.params.house_id,  archived: { $eq: true }},
+      { house_id: req.params.house_id, archived: { $eq: true } },
       function (err, userdata) {
         if (err && !userdata) {
           res.json({
@@ -783,7 +784,7 @@ router.post("/checkPatient", function (req, res, next) {
     const alies_id = req.body.patient_id;
     const messageToSearchWith1 = new User({ alies_id });
     messageToSearchWith1.encryptFieldsSync();
-    User.findOne(  {
+    User.findOne({
       $or: [
         { profile_id: messageToSearchWith.profile_id },
         { alies_id: messageToSearchWith1.alies_id },
@@ -799,12 +800,12 @@ router.post("/checkPatient", function (req, res, next) {
           error: err,
         });
       } else {
-        if(userdata){
+        if (userdata) {
           var createCase = false;
           if (req.body.pin) {
             createCase = req.body.pin == userdata.pin ? true : false;
           } else {
-           
+
             var pos =
               userdata &&
               userdata.assosiated_by.filter(
@@ -814,8 +815,8 @@ router.post("/checkPatient", function (req, res, next) {
               userdata.parent_id === req.body.institute_id
                 ? true
                 : pos && pos.length > 0
-                ? true
-                : false;
+                  ? true
+                  : false;
           }
           if (createCase) {
             res.json({
@@ -840,14 +841,14 @@ router.post("/checkPatient", function (req, res, next) {
             }
           }
         }
-        else{
+        else {
           res.json({
             status: 200,
             hassuccessed: false,
             message: "patient is not exist",
           });
         }
-       
+
       }
     });
   } else {
@@ -952,7 +953,7 @@ router.get("/getPatientFromVH/:house_id", function (req, res, next) {
   const token = req.headers.token;
   let legit = jwtconfig.verify(token);
   if (legit) {
-    virtual_Case.find({ $and: [ {house_id: req.params.house_id}, {inhospital: true}] },
+    virtual_Case.find({ $and: [{ house_id: req.params.house_id }, { inhospital: true }] },
       function (err, user_data) {
         if (err && !user_data) {
           res.json({
@@ -981,45 +982,248 @@ router.get("/getPatientFromVH/:house_id", function (req, res, next) {
 
 
 router.get('/Specialty/:House_id', function (req, res, next) {
-    const token = (req.headers.token)
-    let legit = jwtconfig.verify(token)
-    console.log("legit",legit)
-    if (legit) {
-      // var House_id=req.params.House_id
-      // const HouseidToSearchWith = new User({House_id});
-      // HouseidToSearchWith.encryptFieldsSync();
-      // console.log("HouseidToSearchWith",HouseidToSearchWith)
+  const token = (req.headers.token)
+  let legit = jwtconfig.verify(token)
+  console.log("legit", legit)
+  if (legit) {
+    // var House_id=req.params.House_id
+    // const HouseidToSearchWith = new User({House_id});
+    // HouseidToSearchWith.encryptFieldsSync();
+    // console.log("HouseidToSearchWith",HouseidToSearchWith)
 
-        User.find({"houses.value":req.params.House_id, type : 'doctor'}, function (err, userdata) {
-            if (err && !userdata) {
-                res.json({ status: 200, hassuccessed: false, message: "specialities not found", error: err })
-            } else {
-                
-                console.log("userdata11",userdata)
+    User.find({ "houses.value": req.params.House_id, type: 'doctor' }, function (err, userdata) {
+      if (err && !userdata) {
+        res.json({ status: 200, hassuccessed: false, message: "specialities not found", error: err })
+      } else {
 
-                let varr= userdata.map((element)=>element._id)
-                console.log("varr",varr)
-                
-                const AppointToSearchWith = new Appointments({varr});
-                AppointToSearchWith.encryptFieldsSync();
-                console.log("AppointToSearchWith",AppointToSearchWith)
+        console.log("userdata11", userdata)
 
-                Appointments.find({$or: [{doctor_id:{$in:varr}}, {doctor_id: {$in:AppointToSearchWith.varr}}]},function(err,list){
-                  if(err){
-                    console.log("error",err)
-                  res.json({status:200,hassuccessed: false,error:err})
-                  }else{
-                    console.log("list",list)
-                    res.json({status: 200, hassuccessed: true, data: list})
-                  }
-                })
-            }
+        let varr = userdata.map((element) => element._id)
+        console.log("varr", varr)
+
+        const AppointToSearchWith = new Appointments({ varr });
+        AppointToSearchWith.encryptFieldsSync();
+        console.log("AppointToSearchWith", AppointToSearchWith)
+
+        Appointments.find({ $or: [{ doctor_id: { $in: varr } }, { doctor_id: { $in: AppointToSearchWith.varr } }] }, function (err, list) {
+          if (err) {
+            console.log("error", err)
+            res.json({ status: 200, hassuccessed: false, error: err })
+          } else {
+            console.log("list", list)
+            res.json({ status: 200, hassuccessed: true, data: list })
+          }
         })
-    } 
-    else {
-        res.json({ status: 200, hassuccessed: false, message: 'Authentication required.' })
-    }
+      }
+    })
+  }
+  else {
+    res.json({ status: 200, hassuccessed: false, message: 'Authentication required.' })
+  }
 })
+
+router.get('/Task/:House_id', function (req, res, next) {
+  const token = (req.headers.token)
+  let legit = jwtconfig.verify(token)
+  console.log("legit", legit)
+  if (legit) {
+
+    User.find({ "houses.value": req.params.House_id, type: 'doctor' }, function (err, userdata) {
+      if (err && !userdata) {
+        res.json({ status: 200, hassuccessed: false, message: "specialities not found", error: err })
+      } else {
+
+        console.log("userdata11", userdata)
+
+
+        virtualTask(userdata, req.params.House_id).then((list) => {
+          res.json({ status: 200, hassuccessed: true, data: list })
+        })
+      }
+    })
+  }
+  else {
+    res.json({ status: 200, hassuccessed: false, message: 'Authentication required.' })
+  }
+})
+
+
+router.get("/statisticstopinfo/:House_id", function (req, res, next) {
+  const token = (req.headers.token)
+  let legit = jwtconfig.verify(token)
+  console.log("legit", legit)
+  if (legit) {
+    Promise.all([virtualCase(req.params.House_id), User_Case(req.params.House_id), User_Case1(req.params.House_id)]).then((count, list, list1) => {
+
+      res.json({ status: 200, hassuccessed: true, data: count, list, list1 })
+    })
+  } else {
+    res.json({ status: 200, hassuccessed: false, message: 'Authentication required.' })
+
+  }
+})
+
+
+router.get("/virtualstep/:House_id", function (req, res, next) {
+  const token = (req.headers.token)
+  let legit = jwtconfig.verify(token)
+  console.log("legit", legit)
+  if (legit) {
+    User.find({ "houses.value": req.params.House_id, type: 'doctor' }, function (err, data) {
+      if (err) {
+        console.log("error", err)
+        res.json({ status: 200, hassuccessed: false, error: err })
+      } else {
+        console.log("data", data)
+        virtualCase(data).then((list) => {
+          res.json({ status: 200, hassuccessed: true, data: list })
+
+        })
+
+      }
+    })
+
+  } else {
+    res.json({ status: 200, hassuccessed: false, message: 'Authentication required.' })
+
+  }
+})
+
+router.get("/stasticsrightinfo/:House_id", function (req, res, next) {
+  virtual_step.find({ house_id: req.params.House_id }, function (err, userdata) {
+    if (err) {
+      res.json({ status: 200, hassuccessed: false, message: "specialities not found", error: err })
+
+    } else {
+      console.log("userdata", userdata)
+      // virtual_step.aggregate(
+      //   [
+      //     {
+      //       $match: {
+      //         house_id: req.params.House_id,
+      //         inhospital: true,
+      //       },
+      //     },
+      //     {
+      //       $group: {
+      //         _id: "$step_name",
+      //         count: { $sum: 1 },
+      //       },
+      //     },
+      //   ],function(err, userdata){
+      //     if(err){
+      //       res.json({err})
+      //     }
+      //     else{
+      //     res.json({ status: 200, hassuccessed: true, data: userdata })
+      //     }
+      //   })
+     
+      let step_count = userdata.map((element) => element.steps)
+      console.log("step_count", step_count)
+
+      let count = step_count[0].map((element) => 
+    { return {'step_name': element.step_name, 'counts' : element.case_numbers?  element.case_numbers.length : 0}})
+      console.log("count", count)
+     
+      res.json({status: 200, hassuccessed: true, data: count})
+
+    }
+  })
+})
+
+
+// function virtualstep(userdata,House_id) {
+//   return new Promise((resolve, reject) => {
+//     console.log("House_id", House_id)
+
+//     virtual_step.countDocuments({  }, function (err,data) {
+//       if (err) {
+//         console.log("err", err)
+//         reject(err)
+//       } else {
+//         console.log("userdata", data)
+//         resolve(data)
+//       }
+//     })
+//   })
+
+// }
+
+
+function User_Case(House_id) {
+  return new Promise((resolve, reject) => {
+    console.log("House_id", House_id)
+    User.countDocuments({ "houses.value": House_id, type: 'doctor' }, function (err, userdata) {
+      if (err) {
+        console.log("err", err)
+        reject(err)
+      } else {
+        console.log("userdata")
+        resolve(userdata)
+      }
+    })
+  })
+
+}
+
+function User_Case1(House_id) {
+  console.log('i am here 123')
+  return new Promise((resolve, reject) => {
+    console.log(House_id)
+    User.countDocuments({ "houses.value": House_id, type: 'nusre' }, function (err, userdata) {
+      if (err) {
+        console.log("err111", err)
+        reject(err)
+      } else {
+        console.log("userdata1111", userdata)
+        resolve(userdata)
+      }
+    })
+  })
+
+}
+function virtualCase(House_id) {
+  console.log("House_id", House_id)
+  return new Promise((resolve, reject) => {
+    virtual_Case.countDocuments({ house_id: House_id, inhospital: true }, function (err, count) {
+      if (err) {
+        console.log("err", err)
+        reject(err)
+      } else {
+        console.log("count", count)
+        resolve(count)
+      }
+    })
+  })
+}
+
+function virtualTask(userdata, house_id) {
+  return new Promise((resolve, reject) => {
+    console.log("data", userdata)
+    let varr = userdata.map((element) => element._id)
+    console.log("varr", varr)
+
+    const virtualToSearchWith = new virtual_Task({ varr });
+    virtualToSearchWith.encryptFieldsSync();
+    console.log("virtualToSearchWith", virtualToSearchWith)
+
+
+    virtual_Task.find({ $or: [{ house_id: house_id }, { house_id: { $in: virtualToSearchWith.varr } }] }, function (err, list) {
+      if (err) {
+        console.log("err", err)
+        reject(err)
+      } else {
+        console.log("list", list)
+        var finaldata = [...list, ...userdata]
+        console.log("finaldata", finaldata)
+        resolve(finaldata)
+      }
+    })
+
+  })
+
+}
 
 function getfullInfo(data) {
   return new Promise((resolve, reject) => {
